add notebook for non gpu version

--- a/turingbench_python_cuda/simple_mandelbrot/Dockerfile
+++ b/turingbench_python_cuda/simple_mandelbrot/Dockerfile
@@ -1,7 +1,7 @@
 FROM continuumio/miniconda3
 
 RUN apt-get update
-RUN conda install numpy scipy matplotlib
+RUN conda install numpy scipy matplotlib -y
 
 COPY mandelbrot.py /mandelbrot.py
 
