--- a/turingbench_python_cuda/simple_mandelbrot/Dockerfile
+++ b/turingbench_python_cuda/simple_mandelbrot/Dockerfile
@@ -1,6 +1,18 @@
-FROM continuumio/miniconda3
+FROM ubuntu:16.04
+RUN  apt-get update \
+  && apt-get install -y wget vim bzip2\
+  && rm -rf /var/lib/apt/lists/*
 
 RUN apt-get update
+RUN apt-get -y install curl
+
+#Install MINICONDA
+RUN wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O Miniconda.sh && \
+    /bin/bash Miniconda.sh -b -p /opt/conda && \
+    rm Miniconda.sh
+
+ENV PATH /opt/conda/bin:$PATH
+
 RUN conda install numpy scipy matplotlib -y
 
 COPY mandelbrot.py /mandelbrot.py
